scrollbar fixed

--- a/side-navigation/nav.css
+++ b/side-navigation/nav.css
@@ -34,6 +34,8 @@ body {
     width: calc(100vw - 210px);
     overflow: scroll;
     padding: 0 2px;
+    margin-right: -56px;
+    padding-right: 56px;
 }
 
 .head {
@@ -47,7 +49,7 @@ body {
     background-color: #FAFAFA;
     margin: 0 -4px;
     padding: 0 4px;
-    width: calc(100% - 210px - 90px);
+    width: calc(100% - 210px - 100px);
 }
 
 .head > p {
@@ -89,9 +91,16 @@ body {
 }
 
 .todo > h2 {
+    display: flex;
+    align-items: baseline;
     font-size: 22px;
-    /* color: #55565A; */
     margin-bottom: 40px;
+}
+
+.todo > h2 > span {
+    font-size: 15px;
+    color: #4E34B1;
+    margin-left: 6px;
 }
 
 .item {
@@ -132,6 +141,7 @@ body {
     justify-content: flex-start;
     flex-wrap: wrap;
     padding: 0 16px 16px 16px;
+    border-bottom: 1px solid #e2e2e2;
 }
 
 .integrations__card {
@@ -145,6 +155,11 @@ body {
     height: 106px;
     padding: 8px;
     margin: 8px;
+}
+
+.integrations__card:hover {
+    box-shadow: 0 4px 6px 0 rgba(0,0,0,.1);
+    cursor: pointer;
 }
 
 .integrations__card > img {
